--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
 <!-- build army html page -->
+<html lang='en'>
+
+  <head>
+    <meta charset = 'UTF-8'>
+    <title>Build Your Army</title>
+    <link href='styles.css' rel='stylesheet' />
+  </head>
+
+  <body>
+
+    <div class='header'>
+      <h1>Build Your Army</h1>
+    </div>
+
+    <div class='container-create'>
+      <h3>Create a Hero</h3>
+      <div class='creator'>
+        <div class='selections'>
+          <div class='select-header'>
+            <h3 id='select-head'></h3>
+          </div>
+          <div class='select-img'><img id='select-1-img'></img></div>
+          <p id='select-1-cap'></p>
+          <div class='select-img'><img id='select-2-img'></img></div>
+          <p id='select-2-cap'></p>
+          <div class='select-img'><img id='select-3-img'></img></div>
+          <p id='select-3-cap'></p>
+          <div class='select-img'><img id='select-4-img'></img></div>
+          <p id='select-4-cap'></p>
+        </div>
+        <div class='hero-vals'>
+          <div id='hero-element'></div>
+          <div id='hero-weapon'></div>
+          <div id='hero-familiar'></div>
+        </div>
+        <div id='hero-name'></div>
+        <div class='actions'>
+          <button id='btn-reset-hero'>Reset Hero</button>
+          <button id='btn-next'>Next</button>
+        </div>
+      </div>
+    </div>
+
+    <div class='container-army'>
+      <h3>Your Heroes</h3>
+      <div class='hero-list'>
+      </div>
+    </div>
+
+  </body>
+
+  <script src='scripts.js'></script>
+
+</html>
