--- a/index.html
+++ b/index.html
@@ -11,39 +11,49 @@
 
     <div class='header'>
       <h1>Build Your Army</h1>
+      <button id='btn-reset-army'>Reset</button>
     </div>
 
     <div class='container-create'>
-      <h3>Create a Hero</h3>
-      <div class='creator'>
-        <div class='selections'>
-          <div class='select-header'>
-            <h3 id='select-head'></h3>
-          </div>
-          <div class='select-img'><img id='select-1-img'></img></div>
-          <p id='select-1-cap'></p>
-          <div class='select-img'><img id='select-2-img'></img></div>
-          <p id='select-2-cap'></p>
-          <div class='select-img'><img id='select-3-img'></img></div>
-          <p id='select-3-cap'></p>
-          <div class='select-img'><img id='select-4-img'></img></div>
-          <p id='select-4-cap'></p>
+      <h2>Create a Hero</h2>
+      <button id='btn-add-hero' onclick='createHero()'>&plus;</button>
+      <div class='select'>
+        <div class='select-header'>
+          <h3 id='select-head'>Choose Your Element</h3>
         </div>
-        <div class='hero-vals'>
-          <div id='hero-element'></div>
-          <div id='hero-weapon'></div>
-          <div id='hero-familiar'></div>
+        <div class='select-col'>
+          <div class='select-img'><img id='select-img-1' src='img/element-fire.jpg'></img></div>
+          <p id='select-cap-1'>Option</p>
         </div>
-        <div id='hero-name'></div>
-        <div class='actions'>
-          <button id='btn-reset-hero'>Reset Hero</button>
-          <button id='btn-next'>Next</button>
+        <div class='select-col'>
+          <div class='select-img'><img id='select-img-2' src='img/element-fire.jpg'></img></div>
+          <p id='select-cap-2'>Option</p>
         </div>
+        <div class='select-col'>
+          <div class='select-img'><img id='select-img-3' src='img/element-fire.jpg'></img></div>
+          <p id='select-cap-3'>Option</p>
+        </div>
+        <div class='select-col'>
+          <div class='select-img'><img id='select-img-4' src='img/element-fire.jpg'></img></div>
+          <p id='select-cap-4'>Option</p>
+        </div>
+      </div>
+      <div class='hero-vals'>
+        <div class='vals-col' id='val-element'>Element</div>
+        <div class='vals-col' id='val-weapon'>Weapon</div>
+        <div class='vals-col' id='val-familiar'>Familiar</div>
+      </div>
+      <div class='name'>
+        <input id='hero-name' type='text' name='name' placeholder='name your hero'></input>
+      </div>
+      <div class='actions'>
+        <button id='btn-reset-hero'>Reset Hero</button>
+        <button id='btn-submit'>Submit</button>
       </div>
     </div>
 
     <div class='container-army'>
-      <h3>Your Heroes</h3>
+      <h2>Your Heroes</h2>
       <div class='hero-list'>
       </div>
     </div>
