finishes basic army functionality, some creat hero bugs

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
           <h3 id='select-head'>Choose Your Element</h3>
         </div>
         <div class='select-col'>
-          <div class='select-img'><img id='select-img-1' src='img/element-fire.jpg'></img></div>
+          <div class='select-img'><img id='select-img-1' src='img/placeholder.jpg'></img></div>
           <p id='select-cap-1'>Option</p>
         </div>
         <div class='select-col'>
-          <div class='select-img'><img id='select-img-2' src='img/element-fire.jpg'></img></div>
+          <div class='select-img'><img id='select-img-2' src='img/placeholder.jpg'></img></div>
           <p id='select-cap-2'>Option</p>
         </div>
         <div class='select-col'>
-          <div class='select-img'><img id='select-img-3' src='img/element-fire.jpg'></img></div>
+          <div class='select-img'><img id='select-img-3' src='img/placeholder.jpg'></img></div>
           <p id='select-cap-3'>Option</p>
         </div>
         <div class='select-col'>
-          <div class='select-img'><img id='select-img-4' src='img/element-fire.jpg'></img></div>
+          <div class='select-img'><img id='select-img-4' src='img/placeholder.jpg'></img></div>
           <p id='select-cap-4'>Option</p>
         </div>
       </div>
@@ -53,9 +53,8 @@
     </div>
 
     <div class='container-army'>
-      <h2>Your Heroes</h2>
-      <div class='hero-list'>
-      </div>
+      <h2>Your Army</h2>
+      <div id='army-list'></div>
     </div>
 
   </body>
