--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
       <button id='btn-add-hero' onclick='createHero()'>&plus;</button>
       <div class='select'>
         <div class='select-header'>
-          <h3 id='select-head'>Choose Your Element</h3>
+          <h3 id='select-head'></h3>
         </div>
         <div class='select-col'>
           <div class='select-img'><img id='select-img-1' src='img/placeholder.jpg'></img></div>
-          <p id='select-cap-1'>Option</p>
+          <p id='select-cap-1'></p>
         </div>
         <div class='select-col'>
           <div class='select-img'><img id='select-img-2' src='img/placeholder.jpg'></img></div>
-          <p id='select-cap-2'>Option</p>
+          <p id='select-cap-2'></p>
         </div>
         <div class='select-col'>
           <div class='select-img'><img id='select-img-3' src='img/placeholder.jpg'></img></div>
-          <p id='select-cap-3'>Option</p>
+          <p id='select-cap-3'></p>
         </div>
         <div class='select-col'>
           <div class='select-img'><img id='select-img-4' src='img/placeholder.jpg'></img></div>
-          <p id='select-cap-4'>Option</p>
+          <p id='select-cap-4'></p>
         </div>
       </div>
       <div class='hero-vals'>
-        <div class='vals-col' id='val-element'>Element</div>
-        <div class='vals-col' id='val-weapon'>Weapon</div>
-        <div class='vals-col' id='val-familiar'>Familiar</div>
+        <div class='vals-col' id='val-element'></div>
+        <div class='vals-col' id='val-weapon'></div>
+        <div class='vals-col' id='val-familiar'></div>
       </div>
       <div class='name'>
         <input id='hero-name' type='text' name='name' placeholder='name your hero'></input>
