--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <button id='btn-reset-army'>Reset</button>
     </div>
 
-    <div class='container-create'>
+    <div id='container-create' class='create-collapse'>
       <h2>Create a Hero</h2>
-      <button id='btn-add-hero' onclick='createHero()'>&plus;</button>
+      <button id='btn-add-hero'>&plus;</button>
       <div class='select'>
         <div class='select-header'>
           <h3 id='select-head'></h3>
@@ -44,7 +44,7 @@
         <div class='vals-col' id='val-familiar'></div>
       </div>
       <div class='name'>
-        <input id='hero-name' type='text' name='name' placeholder='name your hero'></input>
+        <input id='hero-name' type='text' name='name'></input>
       </div>
       <div class='actions'>
         <button id='btn-reset-hero'>Reset Hero</button>
