first attempts at hovering info card

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
     <div class='container-army'>
       <h2>Your Army</h2>
-      <div id='army-list'></div>
+      <div id='army-list'>
+      </div>
     </div>
 
   </body>
