adds army attribute counter

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
       </div>
       <div class='hero-vals'>
-        <div class='vals-col' id='val-element'></div>
-        <div class='vals-col' id='val-weapon'></div>
-        <div class='vals-col' id='val-familiar'></div>
+        <div class='hero-vals-col' id='val-element'></div>
+        <div class='hero-vals-col' id='val-weapon'></div>
+        <div class='hero-vals-col' id='val-familiar'></div>
       </div>
       <div class='name'>
         <input id='hero-name' type='text' name='name'></input>
@@ -54,6 +54,26 @@
 
     <div class='container-army'>
       <h2>Your Army</h2>
+      <div class='army-vals'>
+        <div class='army-vals-grp army-vals-element'>
+          <div class='army-vals-col'>Fire<br><span id='army-fire'>0</span></div>
+          <div class='army-vals-col'>Water<br><span id='army-water'>0</span></div>
+          <div class='army-vals-col'>Earth<br><span id='army-earth'>0</span></div>
+          <div class='army-vals-col'>Air<br><span id='army-air'>0</span></div>
+        </div>
+        <div class='army-vals-grp army-vals-weapon'>
+          <div class='army-vals-col'>Sword<br><span id='army-sword'>0</span></div>
+          <div class='army-vals-col'>Axe<br><span id='army-axe'>0</span></div>
+          <div class='army-vals-col'>Staff<br><span id='army-staff'>0</span></div>
+          <div class='army-vals-col'>Dagger<br><span id='army-dagger'>0</span></div>
+        </div>
+        <div class='army-vals-grp army-vals-familiar'>
+          <div class='army-vals-col'>Wolf<br><span id='army-wolf'>0</span></div>
+          <div class='army-vals-col'>Tiger<br><span id='army-tiger'>0</span></div>
+          <div class='army-vals-col'>Bear<br><span id='army-bear'>0</span></div>
+          <div class='army-vals-col'>Ghost<br><span id='army-ghost'>0</span></div>
+        </div>
+      </div>
       <div id='army-list'>
       </div>
     </div>
